# AISE

./: .gitignore  .gitlab-ci.yml  AGENTS.md  AGENT_LOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  README_PYPI.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yml  test.yml
.superpowers/sdd/: task-2-report.md
docs/: gaia-eval.md
docs/superpowers/plans/: 2026-07-08-phycode-phase1-agent-harness.md  2026-07-18-prbench-runtime-refactor.md  2026-07-19-interactive-approval-visibility.md  2026-07-19-prbench-public-full-test.md  2026-07-19-slash-command-completion.md
docs/superpowers/specs/: 2026-07-08-phycode-phase1-agent-harness-design.md  2026-07-18-prbench-public-boundary-design.md  2026-07-18-prbench-runtime-refactor-design.md  2026-07-19-interactive-approval-visibility-design.md  2026-07-19-prbench-public-full-test-design.md  2026-07-19-slash-command-completion-design.md
integrations/: __init__.py
integrations/prbench/: README.md  __init__.py  apply_adapter.py  phycode-evaluator.patch  run_public_full.ps1  run_public_smoke.ps1
integrations/prbench/public_contracts/: aaatest_helloworld.json  bbbtest_alphabet.json  task_white_1993.json
src/phycode/: agent.py  approval.py  approval_store.py  approval_types.py  audio.py  cli.py  composition.py  config.py  context.py  conversation.py  credentials.py  demos.py  event_projection.py  execution.py  feedback.py  gaia_eval.py  interactive.py  llm.py  models.py  policy.py  prbench_contract.py  prbench_eval.py  profiles.py  redaction.py  trace.py  visibility.py
src/phycode/tools/: __init__.py  base.py  calculator_tools.py  file_tools.py  media_tools.py  process_tools.py  search_tools.py  shell_tools.py  state_tools.py  web_tools.py
tests/: prbench_test_support.py  test_agent_loop.py  test_calculator_tools.py  test_cli_commands.py  test_cli_smoke.py  test_config.py  test_credentials.py  test_demos.py  test_docs_process.py  test_execution_verifier.py  test_extended_tools.py  test_file_tools.py  test_gaia_eval.py  test_interactive.py  test_llm_adapters.py  test_media_tools.py  test_models.py  test_policy.py  test_prbench_adapter.py  test_prbench_loop.py  test_prbench_runner.py  test_prbench_security.py  test_process_approval.py  test_profiles_visibility.py  test_redaction.py  test_shell_and_feedback.py  test_state_tools.py  test_tool_registry.py  test_trace_context_memory.py  test_web_tools.py
