[project]
name = "phycode"
version = "0.1.5"
description = "CLI-first coding agent harness with policy-aware tool runtime"
readme = "README_PYPI.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "openpyxl>=3.1.5",
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "pydantic>=2.7.0",
    "pypdf>=5.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "xlrd>=2.0.1",
    "prompt-toolkit>=3.0.52,<4",
]

[project.scripts]
phycode = "phycode.cli:app"

[project.optional-dependencies]
gaia = [
    "faster-whisper>=1.2.1",
    "pyarrow>=18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phycode"]

# Ship a lean source distribution: only the package, its docs entry, and metadata.
# Excludes course_resource/*.pptx, PLAN/SPEC/tests, and other repo-only material.
[tool.hatch.build.targets.sdist]
include = [
    "src/phycode",
    "README_PYPI.md",
    "LICENSE",
]
exclude = [
    "/.superpowers",
    "/.worktrees",
    "/.venv",
    "/.pytest_cache",
    "/dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
